fixed section titles wrapping on some devices

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ a {
   font-size: 5rem;
   color: rgb(197, 197, 197);
   border-radius: 5px;
+  white-space: nowrap;
 }
 
 .main-background {
